reduce logo font size to prevent overlap w sidebar on window resize

--- a/css/application.css
+++ b/css/application.css
@@ -422,7 +422,7 @@ html {
 }
 
 #title-block.picker #title {
-	font-size: 7.4rem;
+	font-size: 7rem;
 	margin: 0 0 0 1.9rem;
 	opacity: .7;
 }
